# ai_sales_genie

./: .env.example  .gitignore  PLAN.md  README.md  alembic.ini  requirements.txt  soul.md  test_hermes.py  test_project_audit_fields.py
langgraph_prototype_project/: pyproject.toml
langgraph_prototype_project/runs/run_76215085/: generation-report.md  validation-report.md  第二阶段设计检查报告.md  系统全局功能描述与设计.md  系统的功能点设计.md  需求结构化.md
langgraph_prototype_project/runs/run_76215085/prototype/: README.md  index.html
langgraph_prototype_project/runs/run_76215085/prototype/assets/css/: styles.css
langgraph_prototype_project/runs/run_76215085/prototype/assets/js/: app.js  (+1 more)
langgraph_prototype_project/runs/run_76215085/页面详细设计/: 司机管理.md  新建订单.md  智能调度.md  订单列表.md  订单详情.md  车辆管理.md  运输轨迹.md  首页.md
langgraph_prototype_project/runs/run_feccfdf9/: 第二阶段设计检查报告.md  系统全局功能描述与设计.md
langgraph_prototype_project/runs/run_feccfdf9/prototype/: README.md  index.html
langgraph_prototype_project/runs/run_feccfdf9/prototype/pages/: 司机管理.html  新建订单.html  智能调度.html  订单列表.html  订单详情.html  车辆管理.html  运输轨迹.html  首页.html
langgraph_prototype_project/runs/run_feccfdf9/页面详细设计/: 车辆管理.md
langgraph_prototype_project/runs/run_feccfdf9_v2_94b813/: 系统的功能点设计.md  需求结构化.md
langgraph_prototype_project/runs/run_feccfdf9_v2_94b813/页面详细设计/: 司机管理.md  新建订单.md  智能调度.md  订单列表.md  订单详情.md  运输轨迹.md  首页.md
langgraph_prototype_project/src/langgraph_prototype_project/: __init__.py  cli.py  llm.py  models.py  skills.py  utils.py  validators.py  workflow.py
langgraph_prototype_project/tests/: test_workflow.py
(+304 files in other folders)
