[project]
name = "langgraph-prototype-project"
version = "0.1.0"
description = "Standalone LangGraph requirement-to-prototype workflow"
requires-python = ">=3.11"
dependencies = [
    "langgraph==1.0.8",
    "openai>=2.11.0,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
]

[project.scripts]
langgraph-prototype = "langgraph_prototype_project.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
